<resources>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unboxing_video_warning">Mohon cek pesanan anda sesuai dengan pesanan aplikasi anda kemudian rekam video ketika membuka kotak pesanan anda, pengajuaan komplain tanpa rekaman video tidak akan dilayani</string>
    <string name="lbl_payment_text">Pembayaran</string>
    <string name="lbl_alamat_pengiriman_text">Alamat Pengiriman</string>
    <string name="lbl_pilih_alamat_lain_text">Pilih Alamat Lain</string>
    <string name="sample_address_text_2">Jl. StreetNameHere No.323, CityName, ProvinceName, CountryName</string>
    <string name="sample_qty">Qty : 3 pc(s)</string>
    <string name="upload_title_text_button">UPLOAD RESEP DOKTER</string>
    <string name="lbl_pengiriman_text">Pengiriman (Ekspedisi)</string>
    <string name="tv_kurir_text">Layanan</string>
    <string name="insurance_option_title">Asuransi Pengiriman</string>
    <string name="tv_biaya_pengiriman_text">Biaya Pengiriman</string>
    <string name="lbl_pembayaran_text">Pembayaran</string>
    <string name="payment_method_title">Metode Pembayaran</string>
    <string name="voucher_input_title">Voucher (Opsional)</string>
    <string name="click_to_see_more">Klik untuk melihat detail</string>
    <string name="tv_total_pembayaran_text">Total Pembayaran</string>
    <string name="btn_lanjut_bayar_text">Lanjut Bayar</string>
    <string name="order_detail_title_text">Detail Pesanan</string>
    <string name="order_id_sample">#000000</string>
    <string name="sample_date_text">16:08:22</string>
    <string name="sample_tracking">JD0098077967</string>
    <string name="copy_button_text">salin</string>
    <string name="sample_name_text">User</string>
    <string name="sample_phone_text">08123456789</string>
    <string name="virtual_acc_number_title">No. Virtual Account</string>
    <string name="product_list_complained_title_text">Produk Dicomplaint</string>
    <string name="ovo">OVO</string>
    <string name="order_subtotal_price_with_variant">subtotal Harga Produk</string>
    <string name="order_detail_discount_title">Rp. 100,000</string>
    <string name="voucher_code_sample">IniVoucherCodeSample</string>
    <string name="finish_order_string">Konfirmasi Pesanan Selesai</string>
    <string name="navigate_to_payment_button_text">Pembayaran</string>
    <string name="order_status_title_text">Status Pesanan</string>
    <string name="chip_title_waiting_payment">Menunggu Pembayaran</string>
    <string name="chip_title_on_process">Dalam Proses</string>
    <string name="chip_title_waiting_cancel">Menunggu Pembatalan</string>
    <string name="empty_order_list_message">Tidak ada Pesanan Saat ini</string>
    <string name="api_request_failed_message">Terjadi Kesalahan. Mohon Coba Kembali</string>
    <string name="sample_card_number">C2201758871</string>
    <string name="cancel_button_text">Batal</string>
    <string name="change_password_button_text">Ganti</string>
    <string name="current_password_input_hint">Password Lama</string>
    <string name="new_password_input_hint">Password Baru</string>
    <string name="password_validation_text">Password harus kombinasi huruf dan angka dengan min. 7 karakter</string>
    <string name="confirmationNegativeResponse">Tidak</string>
    <string name="confirmationPositiveResponse">Ya</string>
    <string name="wishlist_title">Wishlist</string>
    <string name="sample_price_total">Rp. 308,000</string>
    <string name="product_search_hint">Cari Produk</string>
    <string name="empty_wishlist_text">Wishlist Anda Kosong</string>
    <string name="product_list_title_text">produk</string>
    <string name="progressbar_general_text">Loading</string>
    <string name="choose_date_button_text">Pilih Tanggal</string>
    <string name="save_change_button_text">Simpan</string>
    <string name="login_obligatory_warning">Mohon Login Terlebih Dahulu</string>
    <string name="app_update_obligatory_warning">Agar dapat menggunakan fitur terbaru kami, mohon update aplikasi Century Marketplace anda</string>
    <string name="app_maintenance_warning">Mohon maaf saat ini sistem kami sedang mengalami kendala, silahkan coba kembali nanti.</string>
    <string name="selectWishlistDateDialogTitle">Pilih Tanggal</string>
    <string name="profile_hyperlink">Profile Anda</string>
    <string name="chat_ui_title">Chat</string>
    <string name="basket_ui_title">Keranjang Anda</string>
    <string name="home_title_text">Kembali Ke Home</string>
    <string name="progress_dialog_message">Mohon T unggu Sebentar</string>
    <string name="otp_ui_title">Verifikasi</string>
    <string name="otp_instruction">Kami akan mengirimkan kode OTP melalui no. handphone yang anda masukkan sebelum nya</string>
    <string name="send_to_phone_number">Kirim OTP</string>
    <string name="kode_otp_hint">Kode OTP</string>
    <string name="resend_to_phone_number">Kirim Ulang OTP</string>
    <string name="otp_try_again_title">Anda dapat mengirim kembali OTP dalam</string>
    <string name="otp_try_again_countdown">%d detik</string>
    <string name="otp_sent_message">Kode OTP berhasil terkirim, silahkan cek Inbox SMS Anda</string>
    <string name="phoneInputHint">No. Handphone (08xxx…)</string>
    <string name="log_out_confirmation_message">Anda yakin akan Log out</string>
    <string name="login_button_text">Login</string>
</resources>