<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".orderstatus.OrderStatusListFragment">

    <RelativeLayout
        android:id="@+id/baseLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_round_header"
            android:elevation="8dp"
            android:paddingTop="@dimen/header_vertical_padding"
            android:paddingBottom="16dp">

            <RelativeLayout
                android:id="@+id/titleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp">

                <ImageView
                    android:id="@+id/backToPreviousPageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    app:tint="@color/white" />


                <TextView
                    android:id="@+id/statusDetailTitle"
                    style="@style/fragment_header_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_toEndOf="@id/backToPreviousPageButton"
                    android:text="@string/order_status_title_text"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toTopOf="parent" />
            </RelativeLayout>


            <TextView
                android:id="@+id/orderDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleLayout"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:text="Member ID"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvMemberId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleLayout"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/sample_date_text"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold|italic" />
        </RelativeLayout>

        <HorizontalScrollView
            android:id="@+id/hsv_filter_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/headerLayout"
            android:layout_marginTop="@dimen/margin_between_header_and_component"
            android:layout_marginBottom="10dp"
            android:scrollbars="none">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_filter_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:checkedChip="@+id/chip_All"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">


                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_All"
                    style="@style/CustomChip.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="Semua"
                    android:textColor="@color/black" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_waiting_payment"
                    style="@style/CustomChip.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_title_waiting_payment"
                    android:textColor="@color/black" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_on_process"
                    style="@style/CustomChip.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_title_on_process"
                    android:textColor="@color/black" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_waiting_cancel"
                    style="@style/CustomChip.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_title_waiting_cancel"
                    android:textColor="@color/black" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_waiting_refund"
                    style="@style/CustomChip.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:text="Proses Komplain"
                    android:textColor="@color/black" />
            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>


        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/srl_order_status_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/hsv_filter_order">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_order_status_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <TextView
            android:id="@+id/emptyOrderStatusListMessage"
            style="@style/empty_list_message_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/empty_order_list_message"
            android:textStyle="bold"
            android:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="32dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Loading..."
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

</layout>