<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="24dp"
        android:paddingVertical="24dp">

        <TextView
            android:id="@+id/changePasswordDialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ganti Password"
            android:textSize="18sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/currentPasswordInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/changePasswordDialogTitle"
            android:layout_marginTop="16dp"
            android:hint="@string/current_password_input_hint"
            app:boxBackgroundColor="@android:color/transparent"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/currentPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/dividerLine"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/currentPasswordInputLayout"
            android:layout_marginTop="12dp"
            android:background="#c0c0c0" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newPasswordInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dividerLine"
            android:layout_marginTop="16dp"
            android:hint="@string/new_password_input_hint"
            app:boxBackgroundColor="@android:color/transparent"
            app:endIconMode="password_toggle"
            app:helperText="Tentukan Password baru anda !"
            app:helperTextEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="14sp"
                app:endIconMode="password_toggle" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmNewPasswordInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/newPasswordInputLayout"
            android:layout_marginTop="10dp"
            android:hint="Konfirmasi Password Baru"
            app:boxBackgroundColor="@android:color/transparent"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmNewPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/applyChangePasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirmNewPasswordInputLayout"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="28dp"
            android:text="@string/change_password_button_text"
            android:textSize="12sp"
            android:textStyle="bold"
            app:cornerRadius="16dp" />
    </RelativeLayout>
</layout>